# ocaml_serverless_test

./: dune-project  serverless_test.opam  serverless_test.opam.locked
lib/: dune
pulumi/: Program.fs  Pulumi.dev.yaml  Pulumi.yaml
test/: dune
